--- a/25s_math/hwit-2.htm
+++ b/25s_math/hwit-2.htm
@@ -42,7 +42,7 @@
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">題目敘述</p>
-某商店正在舉辦買 M 送 N 的特惠活動，亦即每買了 M 樣商品時，最多會贈送 N 樣更便宜的商品。 而且，當你買了很多樣商品時，可以用省最多的方式來計算。 例如，若你選了七樣商品，價格分別是 350, 300, 400, 200, 250, 150, 100， 則以買二送<span style="font-size: 0px;">二</span><span id="d">的</span>方式計算時，最多應可省下 450 元，即 300 元和 150 元的商品視為贈送。 請你撰寫一個函式 buy_m_get_n_free，幫助消費者計算最多可以省下多少錢。
+某商店正在舉辦買 M 送 N 的特惠活動，亦即每買了 M 樣商品時，最多會贈送 N 樣等值或更便宜的商品（贈送品項的任何一件，都要比 M 樣商品的任何一件等值或便宜）。 而且，當你買了很多樣商品時，可以用讓你能省最多的方式來計算。 例如，若你選了七樣商品，價格分別是 350, 300, 400, 200, 250, 150, 100， 則以買二送<span style="font-size: 0px;">二</span><span id="d">的</span>方式計算時，最多應可省下 450 元，即 300 元和 150 元的商品視為贈送。 請你撰寫一個函式 buy_m_get_n_free，幫助消費者計算最多可以省下多少錢。
 
 <p style="background-color:#f99;font-size:17pt">輸入說明</p>
 兩個正整數 m 和 n，以及一個正整數串列 prices，依次代表買 M 送 N 的 M 和 N，以及所購買的商品的價錢。
