--- a/25s_math/hwit-1.htm
+++ b/25s_math/hwit-1.htm
@@ -36,7 +36,7 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述</p>
 <center><img src="pics/wof.jpg" height="350"></center><br>
-由於肉眼看字實在太麻煩了，但是讓各位辨識圖片中的字又有些困難，所以本題會以多行字串的方式，並且每行都是對齊的格式來提供資訊給你，請你撰寫一個函式 words_of_fortune，來檢查多行字串當中是否存在某特定單字。請注意，本題<span style="font-size: 0px;">不</span>允許看橫的（由左到右）和直的（由上到下），但是<span id="d">會</span>有斜的（由左上到右下）。
+由於肉眼看字實在太麻煩了，但是讓各位辨識圖片中的字又有些困難，所以本題會以多行字串的方式（但內容可能會有一或多行，下同），並且每行都是對齊的格式來提供資訊給你，請你撰寫一個函式 words_of_fortune，來檢查多行字串當中是否存在某特定單字。請注意，本題<span style="font-size: 0px;">不</span>允許看橫的（由左到右）和直的（由上到下），但是<span id="d">會</span>有斜的（由左上到右下）。
 
 <p style="background-color:#f99;font-size:17pt">輸入說明</p>
 第一個參數是一個多行字串，每行的內容只有大寫英文字母，每行的字母數相等，且不會有空行。第二個參數是一個單行字串，內容也只有大寫英文字母，是要尋找的目標單字。
