--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -42,19 +42,6 @@
 			</ul>
 		</td>
 	</tr>
-	<tr>
-		<td class="tdLeft">02/20</td>
-		<td class="tdRight">
-			加簽原則（公告至加退選教師簽核結束）
-			<ol>
-				<li value="0">下述之「選課」不含加退選，「原修生」指修過教師開設的程式設計一並及格者，「申請」指申請加簽。</li>
-				<li>若有在某幾次選課前告知教師，因不可抗力因素無法參加某幾次選課亂數，並經教師認可者，亦視同參加。</li>
-				<li>所有選課階段皆參加的原修生，且在 W01 上課前申請者，一律核准。</li>
-				<li>餘下者，若有課後練習 01 表現優良，且於 W01 課前已申請者，依下列優先順序，於 W01 課後至 W02 課前，隨時可能於選課人限未滿時核准：練習表現（不含問卷，佳者優先）、R6 或 Ra 沒有正課或演習課（已回報沒課堂數多者優先）、參加選課亂數次數（多者優先）、原修生（符合者優先）、早申請（早者優先）。</li>
-				<li>再餘下者，若有於 W02 課前申請者，於 W02 課後，依下列優先順序視狀況核准：作業成績（不含 bonus，高者優先）、練習成績（高者優先）、R6 或 Ra 沒有正課或演習課（已回報沒課堂數多者優先）、參加選課亂數次數（多者優先）、原修生（符合者優先）、早申請（早者優先）。</li>
-			</ol>
-		</td>
-	</tr>
 </table>
 
 <br><br>
@@ -91,17 +78,17 @@
 	<tr>
 		<td class="tdLeft">W03: 03/06</td>
 		<td class="tdMid">
-			質數篩法</a>
+			<a href="https://geniusturtle6174.github.io/tutor_python">質數篩選</a></a>
 		</td>
 		<td class="tdRight">
-			課後練習 02<br>
+			<a href="pr02.htm">課後練習 02</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W04: 03/13</td>
 		<td class="tdMid">
-			矩陣運算<br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">矩陣運算</a><br>
 		</td>
 		<td class="tdRight">
 			課後練習 03<br>
@@ -176,6 +163,7 @@
 		</td>
 		<td class="tdRight">
 			課後練習 08<br>
+			期末專案題目
 		</td>
 	</tr>
 
@@ -186,6 +174,7 @@
 		</td>
 		<td class="tdRight">
 			課後練習 09<br>
+			期末專案規則
 		</td>
 	</tr>
 
