--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -91,7 +91,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">矩陣運算</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 03<br>
+			<a href="pr03.htm">課後練習 03</a><br>
 		</td>
 	</tr>
 
