--- a/25s_math/pr02.htm
+++ b/25s_math/pr02.htm
@@ -21,7 +21,7 @@
 	<li>第一題應於發布當週 demo，排隊請使用<a href="https://forms.gle/jkXGJKXja4DXNJ5GA">此連結</a>。</li>
 	<li>第二題可於發布次週 demo，程式碼請於屆時直接帶至課堂，不必事先繳交，排隊連結屆時公布。
 		<ul>
-			<li>第二題若於本週 demo 者，可以 import math。</li>
+			<li>第二題若於發布當週 demo 者，可以 import math。</li>
 		</ul>
 	</li>
 	<li>你的函式必需至少在輸入為五位數以內的狀況適用。</li>
