--- a/25s_math/pr03.htm
+++ b/25s_math/pr03.htm
@@ -11,16 +11,16 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(5%，當週 demo)以「矩陣與自己的反矩陣相乘會產生單位矩陣」的方式，將教材範例計算的反矩陣，與原本的矩陣相乘（矩陣乘法可使用 numpy 內建函式計算），並肉眼觀察相乘結果與單位矩陣的差異。</li>
-	<li>(5%，當週 demo)以「平均絕對誤差」的方式，將教材範例計算的反矩陣，與 numpy 內建的反矩陣函式的結果做比較。</li>
-	<li>(5%，當週 demo)將教材範例計算的行列式值，與 numpy 內建的行列式函式的結果做肉眼觀察比較。</li>
-	<li>(5%，當週 demo)實測並回答能使教材降階展開範例計算行列式值的時間，在體感 5 秒以內的最大 N 值。</li>
-	<li>(20%，當週 demo)接續教材的三角化的範例，來計算矩陣的行列式值，並與 numpy 內建的行列式函式的結果做肉眼觀察比較。</li>
-	<li>(60%，可於次週 demo)。請以 time 或其他函式庫，測量以降階展開的方式計算行列式值時，當矩陣大小 N 在 2 以上（至第四題求出的最大值為止）的時間，並將結果繪製成折線圖
+	<!--li>(5%，當週 demo)以「矩陣與自己的反矩陣相乘會產生單位矩陣」的方式，將教材範例計算的反矩陣，與原本的矩陣相乘（矩陣乘法可使用 numpy 內建函式計算），並肉眼觀察相乘結果與單位矩陣的差異。</li-->
+	<li>(10%，當週 demo)以「平均絕對誤差」的方式，將教材範例計算的反矩陣，與 numpy 內建的反矩陣函式的結果做比較。</li>
+	<!--li>(5%，當週 demo)將教材範例計算的行列式值，與 numpy 內建的行列式函式的結果做肉眼觀察比較。</li-->
+	<li>(10%，當週 demo)實測並回答能使教材降階展開範例計算行列式值的時間，在體感 5 秒以內的最大 N 值。</li>
+	<li>(20%，當週 demo)接續教材的三角化的範例，來計算矩陣的行列式值，並與 numpy 內建的行列式函式的結果計算差異。</li>
+	<li>(60%，可於次週 demo)。請以 time 或其他函式庫，測量以降階展開的方式計算行列式值時，當矩陣大小 N 在 2 以上（至第二題求出的最大值為止）的時間，並將結果繪製成折線圖
 		<ul>
 			<li>圖的 x 軸必須是 N 值，y 軸必須是時間，且皆必須以 xlabel 及 ylabel 標示。</li>
 			<li>程式碼請於屆時直接帶至課堂，不必事先繳交。</li>
-			<li>(5% bonus)每個 N 都做五次以上的實驗，並改畫成 boxplot。</li>
+			<li>(10% bonus)每個 N 都做十次以上的實驗，並改畫成 boxplot。</li>
 		</ul>
 	</li>
 </ul>
@@ -30,7 +30,7 @@
 <ul>
 	<li>排隊請使用<a href="https://forms.gle/2BGGXKfVGRxAN1Yw9">此連結</a>。</li>
 	<li>本週題目皆允許使用 numpy，最後一題增加允許使用 matplotlib 和你選定的計時函式庫；但 numpy 部分除題目明確要求外，不得出現教材「矩陣運算」的範例中沒有的函式。</li>
-	<li>於前五題中，你只能複製教材範例，並在範例程式碼結束後的地方新增自己的程式碼，且新增的程式碼不論在 N 為多少時都要能正確運作。若教師或助教判定你對範例有太多不必要的修改時，該題可能不會給分。</li>
+	<li>於前三題中，你只能複製教材範例，並在範例程式碼結束後的地方新增自己的程式碼，且新增的程式碼不論在 N 為多少時都要能正確運作。若教師或助教判定你對範例有太多不必要的修改時，該題可能不會給分。</li>
 </ul>
 
 </body></html>
