Update pr03 again...

--- a/25s_math/pr03.htm
+++ b/25s_math/pr03.htm
@@ -12,8 +12,8 @@
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
 	<li>(10%，當週 demo)實測並回答能使教材降階展開範例計算行列式值的時間，在體感 5 秒以內的最大 N 值。</li>
-	<li>(10%，當週 demo)接續教材的三角化的範例，來計算矩陣的 rank，並與 numpy 內建的 rank 計算函式的結果比較差異。</li>
-	<li>(10%，當週 demo)接續教材的三角化的範例，來計算矩陣的行列式值，並與 numpy 內建的行列式計算函式的結果比較差異。</li>
+	<li>(10%，當週 demo)接續教材的三角化的範例，以「對角線上非零元素的個數」來計算矩陣的 rank，並與 numpy 內建的 rank 計算函式的結果進行比較。</li>
+	<li>(10%，當週 demo)接續教材的三角化的範例，以「對角線上的元素的乘積」來計算矩陣的行列式值，並與 numpy 內建的行列式計算函式的結果進行比較。注意：請記得跟三角化前的矩陣也做比較。</li>
 	<li>(40%，可於次週 demo)請以 time 或其他函式庫，測量以降階展開的方式計算行列式值時，當矩陣大小 N 在 2 以上的時間，並將結果繪製成折線圖
 		<ul>
 			<li>一個 N 值只需要做一次實驗，N 值最大須至第二題求出的最大值為止。</li>
@@ -30,8 +30,8 @@
 
 <ul>
 	<li>排隊請使用<a href="https://forms.gle/2BGGXKfVGRxAN1Yw9">此連結</a>。</li>
-	<li>本週題目皆允許使用 numpy，最後兩題增加允許使用 matplotlib 和你選定的計時函式庫；但 numpy 部分除題目直接要求外，不得出現教材「矩陣運算」的範例中沒有的函式。</li>
-	<li>於前三題中，你只能複製教材範例，並在範例程式碼結束後的地方新增自己的程式碼，且新增的程式碼對任何合理範圍的 N 值都要能正確運作。若教師或助教判定你對範例有太多不必要的修改時，該題可能不會給分。</li>
+	<li>本週題目皆允許使用 numpy，最後兩題增加允許使用 matplotlib 和你選定的計時函式庫。此外，在不違反題目要求的情況下，可以盡量使用 numpy 的內建函式。</li>
+	<li>於前三題中，對教材範例的修改應該盡可能的少。若教師或助教判定你有太多不必要的修改時，可能會予以扣分。</li>
 </ul>
 
 </body></html>
