--- a/25s_math/pr03.htm
+++ b/25s_math/pr03.htm
@@ -16,7 +16,7 @@
 	<li>(10%，當週 demo)接續教材的三角化的範例，以「對角線上的元素的乘積」來計算矩陣的行列式值，並與 numpy 內建的行列式計算函式的結果進行比較。注意：請記得跟三角化前的矩陣也做比較。</li>
 	<li>(40%，可於次週 demo)請以 time 或其他函式庫，測量以降階展開的方式計算行列式值時，當矩陣大小 N 在 2 以上的時間，並將結果繪製成折線圖
 		<ul>
-			<li>一個 N 值只需要做一次實驗，N 值最大須至第二題求出的最大值為止。</li>
+			<li>一個 N 值只需要做一次實驗，N 值最大須至第一題求出的最大值為止。</li>
 			<li>計時跟繪圖必須在同一個 py 檔案裡執行一次即完成，不能有計時後複製結果至另外的檔案再繪圖，或任何類似行為。</li>
 			<li>圖的 x 軸必須是 N 值，y 軸必須是時間，且皆必須以 xlabel 及 ylabel 標示。</li>
 			<li>次週 demo 者，程式碼請於屆時直接帶至課堂，不必事先繳交。</li>
