--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -101,7 +101,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">動態規劃</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 04<br>
+			<a href="pr04.htm">課後練習 04</a><br>
 		</td>
 	</tr>
 
