--- a/25s_math/pr04.htm
+++ b/25s_math/pr04.htm
@@ -11,7 +11,7 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(100%，當週 demo)請回答在動態規劃教材的第一個範例中，若將 str_a 設為 '<span id="str_a"></span>'，以及 str_b 設為 '<span id="str_b"></span>' 時的 d 變數的全部內容。</li>
+	<li>(100%，可於隔週 demo)請回答在動態規劃教材的第一個範例中，若將 str_a 設為 '<span id="str_a"></span>'，以及 str_b 設為 '<span id="str_b"></span>' 時的 d 變數的全部內容。</li>
 	<li>(自我練習不計分)請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/n-th-tribonacci-number">1137. N-th Tribonacci Number</a></li>
 	<li>(自我練習不計分)請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/pascals-triangle">118. Pascal's Triangle</a></li>
 </ul>
@@ -36,7 +36,7 @@ for(i=0;i<n;i++){
 
 <ul>
 	<li>排隊請使用<a href="https://forms.gle/59qP9D6GwZwhUUD18">此連結</a>。</li>
-	<li>排隊第三次起，每次扣 5 分。</li>
+	<li>排隊第三次起，每次扣 5 分。隔週 demo 者，視為多排隊一次。</li>
 </ul>
 
 </body></html>
