--- a/25s_math/hwmt-3.htm
+++ b/25s_math/hwmt-3.htm
@@ -42,7 +42,7 @@
 但今天，我們要算的是兩個矩陣之間的一種新運算 ⊕，D = A ⊕ B，定義如下：<br>
 <center><img src="pics/apsp_2.png"></center><br>
 
-本題會輸入一個方陣 M 跟一個正整數 k，請大家計算出 M 矩陣對自己做 ⊕ 運算 k 次的結果。 例如 k = 2 就計算 M ⊕ M，k = 3 即計算 M ⊕ M ⊕ M。
+本題要請你撰寫一個函式 all_pairs_shortest_path，輸入是一個方陣 M 跟一個正整數 k，請大家計算出 M 矩陣對自己做 ⊕ 運算 k 次的結果。 例如 k = 2 就計算 M ⊕ M，k = 3 即計算 M ⊕ M ⊕ M。
 
 <p style="background-color:#f99;font-size:17pt">輸入說明</p>
 
