--- a/25s_math/hwmt.htm
+++ b/25s_math/hwmt.htm
@@ -37,8 +37,8 @@
 	<li>檔案內若有任何不屬於 function（前兩題）中的程式碼，除個別題目另有說明外，應包含在「if __name__ == '__main__':」當中，否則可能會有折扣；若有未移除或註解掉之 print 等任何足以干擾自動批改的程式碼時，亦會有折扣。</li>
 	<li>Pylint Bonus
 		<ul>
-			<li>每題評分指令皆為「pylint --disable=C0103,C0111,C0114,C0116,C0301,C1801,R0205,R0903,R0911,R0912,R1705,R1728,W0102 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
-			<li>每題給分方式為 max(pylint-score, 0)，整體分數取各題分數最小值乘以 0.4。</li>
+			<li>每題評分指令皆為「pylint --disable=C0103,C0114,C0116,W0621 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
+			<li>每題給分方式為 max(pylint-score, 0)，整體分數取各題分數最小值乘以 0.3。</li>
 			<li>若在任一題的程式碼中，有試圖關閉或避開評分指令未列出的評比項目等行為時，本 bonus 不給分。</li>
 		</ul>
 	</li>
