--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -108,10 +108,10 @@
 	<tr>
 		<td class="tdLeft">W06: 03/27</td>
 		<td class="tdMid">
-			梯度下降<br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：梯度下降</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 05<br>
+			<a href="pr05.htm">課後練習 05</a><br>
 			<a href="hwmt.htm">期中作業</a>
 		</td>
 	</tr>
