--- a/25s_math/hwmt-2.htm
+++ b/25s_math/hwmt-2.htm
@@ -66,7 +66,7 @@
 	<li>填表方式提示
 		<ul>
 			<li>D<sub>i,j</sub> 為 A 商品只買 i 個和 B 商品只買 j 個時的最便宜買法的價錢。</li>
-			<li>令套餐數量為 k，則 D<sub>i,j</sub> 應在「完全不要組套餐」和「能組某一個套餐的話就組看看」之間，共 k + 1 種情況取最大值。</li>
+			<li>令套餐數量為 k，則 D<sub>i,j</sub> 應在「完全不要組套餐」和「能組某一個套餐的話就組看看」之間，共 k + 1 種情況取最小值。</li>
 		</ul>
 	</li>
 	<li>程式架構範例如下，建議只修改標為 pass 的地方以及「if __name__ == '__main__':」區塊的內容，否則若影響自動批改時，可能會有折扣：
