--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -139,17 +139,17 @@
 	<tr>
 		<td class="tdLeft">W09: 04/17</td>
 		<td class="tdMid">
-			機器學習複習：基本概念、最近鄰居法<br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習（複習）：基本概念、效果評估</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 06<br>
+			<a href="pr06.htm">課後練習 06</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W10: 04/24</td>
 		<td class="tdMid">
-			機器學習複習：線性回歸、特徵降維<br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習（複習）：最近鄰居法、線性回歸</a><br>
 		</td>
 		<td class="tdRight">
 			課後練習 07<br>
@@ -159,7 +159,7 @@
 	<tr>
 		<td class="tdLeft">W11: 05/01</td>
 		<td class="tdMid">
-			機器學習：類神經網路<br>
+			機器學習：特徵降維（複習）、類神經網路<br>
 		</td>
 		<td class="tdRight">
 			課後練習 08<br>
