--- a/25s_math/pr06.htm
+++ b/25s_math/pr06.htm
@@ -19,7 +19,7 @@
 			<li>本題接受隔週 demo，但是會打八折。</li>
 		</ul>
 	</li>
-	<li>(40%)承上，請根據你上一題選擇的是分類或回歸，並在不改變教材範例中參數的的情況下，來驗證教材範例中計算的 accuracy 或 MAE 是否相近。
+	<li>(40%)承上，請根據你上一題選擇的是分類或回歸，並在不改變教材範例中模型參數的的情況下，來驗證教材範例中計算的 accuracy 或 MAE 是否相近。
 		<ul>
 			<li>本題接受隔週 demo，但是會打八折。</li>
 		</ul>
