--- a/25s_math/pr06.htm
+++ b/25s_math/pr06.htm
@@ -24,7 +24,7 @@
 			<li>本題接受隔週 demo，但是會打八折。</li>
 		</ul>
 	</li>
-	<li>(Bouns: 5%)請改變模型參數，並找出一組能比教材範例中計算的 accuracy 或 MAE 更高者。
+	<li>(Bouns: 5%)請改變模型參數，並找出一組能比教材範例中計算的 accuracy 或 MAE 更佳者。
 		<ul>
 			<li>此加分題隔週不打折，但前一題未取得分數者，加分題亦不給分。</li>
 		</ul>
