--- a/25s_math/pr07.htm
+++ b/25s_math/pr07.htm
@@ -18,6 +18,7 @@
 		<ul>
 			<li>自己用逗點分隔每行會有問題，因此建議使用 csv 函式庫來讀取。</li>
 			<li>請勿手動對 csv 檔案作任何更動。</li>
+			<li>本題接受隔週 demo，但是會打七折。</li>
 		</ul>
 	</li>
 	<li>(30%)讀取其中的 test.csv，並以 Sex 和 Age 欄位為特徵，加上前一步訓練出的分類器，回答預測結果。
@@ -25,7 +26,7 @@
 			<li>建議使用 csv 函式庫來讀取。</li>
 			<li>請勿手動對 csv 檔案作任何更動。</li>
 			<li>於本題中，把代表預測結果的變數 print 出來即可。</li>
-			<li>於本題起接受隔週 demo，但是會打八折。</li>
+			<li>本題之隔週 demo 改為打八折。</li>
 		</ul>
 	</li>
 	<li>(20%)把前一步的預測結果，修改成 Kaggle 指定的格式，並上傳至 Kaggle 看看預測準確度。</li>
