--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -159,22 +159,21 @@
 	<tr>
 		<td class="tdLeft">W11: 05/01</td>
 		<td class="tdMid">
-			機器學習：類神經網路<br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：類神經網路（簡介與多層感知器）</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 08<br>
-			期末專案題目
+			<a href="pr08.htm">課後練習 08</a><br>
+			期末專案
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W12: 05/08</td>
 		<td class="tdMid">
-			機器學習：類神經網路
+			機器學習：交叉驗證
 		</td>
 		<td class="tdRight">
 			課後練習 09<br>
-			期末專案規則
 		</td>
 	</tr>
 
@@ -191,7 +190,7 @@
 	<tr>
 		<td class="tdLeft">W14: 05/22</td>
 		<td class="tdMid">
-			機器學習：支撐向量機、決策樹</a>
+			機器學習：決策樹</a>
 		</td>
 		<td class="tdRight">
 			課後練習 11<br>
@@ -201,7 +200,7 @@
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			機器學習：決策樹<br>
+			機器學習：TBA<br>
 		</td>
 		<td class="tdRight">
 			課後練習 12<br>
