--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -163,14 +163,14 @@
 		</td>
 		<td class="tdRight">
 			<a href="pr08.htm">課後練習 08</a><br>
-			期末專案
+			<a href="finalProject.htm">期末專案</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W12: 05/08</td>
 		<td class="tdMid">
-			機器學習：交叉驗證
+			機器學習：決策樹
 		</td>
 		<td class="tdRight">
 			課後練習 09<br>
@@ -190,7 +190,7 @@
 	<tr>
 		<td class="tdLeft">W14: 05/22</td>
 		<td class="tdMid">
-			機器學習：決策樹</a>
+			機器學習：交叉驗證、實作演練
 		</td>
 		<td class="tdRight">
 			課後練習 11<br>
@@ -200,7 +200,7 @@
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			機器學習：TBA<br>
+			機器學習：實作演練<br>
 		</td>
 		<td class="tdRight">
 			課後練習 12<br>
