--- a/25s_math/pr08.htm
+++ b/25s_math/pr08.htm
@@ -19,7 +19,7 @@
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 
 <ul>
-	<li>(70%)以下是一個將實驗重複五次的範例，請將 MLPClassifier 的參數內容進行修改，例如「hidden_layer_sizes=(32, 32)」，再跑另外五次，並將兩個五次的結果用 boxplot 繪製。
+	<li>(70%)以下是一個將實驗重複五次的範例，請將 MLPClassifier 的參數內容進行修改，例如「hidden_layer_sizes=(32, 32)」，再跑另外五次，並將兩個五次的結果用 boxplot 繪製後，手動用視窗上的儲存按鈕，將繪製結果儲存成 png 檔案。
 <pre class="brush: py">
 import numpy as np
 from sklearn.datasets import load_digits
@@ -48,7 +48,7 @@ for _ in range(5):
 
 <ul>
 	<li>本週僅允許該範例有 import 的函式庫，以及 matplotlib。</li>
-	<li>完成後，請將第一題的 py 檔案，以及兩題的圖片，在 eeclass 專區以附件方式繳交。於課堂，教師將依繳交順序叫號 demo。</li>
+	<li>完成後，請將第一題的 py 檔案，以及兩題的圖片（png 檔），在 eeclass 專區以附件方式繳交。於課堂，教師將依繳交順序叫號 demo。</li>
 	<li>隔週 demo 者之折扣為八折。</li>
 </ul>
 
