--- a/25s_math/finalProject.htm
+++ b/25s_math/finalProject.htm
@@ -26,13 +26,14 @@
 			<li>預測成績：檔名應為 lb_result.txt，內容只有一行，為你在排行榜上所取得的最佳評估結果。</li>
 			<li>程式
 				<ul>
-					<li>只須執行一個 *.py 檔案時，該 *.py 檔案名稱須以 run_ 開頭，後面可且僅可接半形的小寫英文、底線或數字。</li>
-					<li>須執行超過一個 *.py 檔案時，這些 *.py 檔案名稱須依照執行順序，以 run1_、run2_、... 為開頭，且最多只能編號至 run4_。後面一樣可且僅可接半形的小寫英文、底線或數字。</li>
-					<li>若要撰寫被用來 import 的檔案，則檔名除了不能以 run 或長相類似的單字(num, rum, ...)開頭外，不受限制。</li>
+					<li>只須執行一個 *.py 檔案時，該 *.py 檔案名稱須以 run_ 開頭，餘下的部分原則上比照 Python 變數命名規則。</li>
+					<li>須執行超過一個 *.py 檔案時，這些 *.py 檔案名稱須依照執行順序，以 run1_、run2_、... 為開頭，且最多只能編號至 run4_。餘下的部分一樣原則上比照 Python 變數命名規則。</li>
+					<li>若要撰寫被用來 import 的檔案，則檔名除了不能以 run 或長相類似的單字(num, rum, ...)開頭，以及應比照 Python 變數命名規則以外，不受限制。</li>
 					<li>若有嘗試多種方法，應繳交你取得最佳結果的方法。</li>
 				</ul>
 			</li>
 			<li>報告：檔名為 report.txt 或 report.pdf。</li>
+			<li>前述的內容請直接上傳繳交，不要壓縮。</li>
 			<li>前述之外的內容（包含但不限於競賽資料），不應在繳交之列。</li>
 		</ul>
 	</li>
@@ -47,7 +48,7 @@
 			</li>
 			<li>Pylint (10%)：
 				<ul>
-					<li>評分指令待公布<!--每個 *.py 檔案的評分指令皆為「pylint --disable=... your_file.py」。評分結果以教師安裝的版本(3.3.0)為準-->。</li>
+					<li>每個 *.py 檔案的評分指令皆為「pylint --disable=C0114,C0116,C0209,R1719,W0621,W0632,W0702,W1514 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
 					<li>每個 *.py 檔案的給分方式為 max(pylint-score, 0)，本項評分取所有檔案的最小值。</li>
 					<li>若在任一檔案的程式碼中，有試圖關閉或避開評分指令未列出的評比項目等行為時，本項不給分。</li>
 				</ul>
@@ -62,6 +63,7 @@
 <ul>
 	<li>請以右列項目請直接存放在同一個目錄下的狀況來撰寫程式：題目給定之 train.csv、題目給定之 test.csv、所有程式碼、程式產生的最後的 submission file。</li>
 	<li>程式的中間產物可以直接存放在同一個目錄下，亦可建立子資料夾存放，唯子資料夾應能由程式判斷是否需建立。</li>
+	<li>任何「run」開頭的程式碼，必須能以不帶參數的方式在 command line 執行。</li>
 	<li>請盡可能避免使用隨機程度過大的模型來進行預測。前述「隨機程度過大」之參考標準，為你所宣稱的成績，跟教師抽驗結果的成績，其差距在全班預測成績的 1 個標準差以上，即 1 * np.std(whole_class_claimed_scores) 以上。</li>
 </ul>
 
