--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -56,19 +56,19 @@
 	<tr>
 		<td class="tdLeft">W01: 02/20</td>
 		<td class="tdMid">
-			<a href="courseIntro.htm">課程簡介</a><br>
+			<a href="courseIntro.htm">課程簡介</a>
 		</td>
 		<td class="tdRight">
 			<a href="prAndHwRules.htm">課後練習及作業總則</a><br>
 			<a href="pr01.htm">課後練習 01</a><br>
-			<a href="hwit.htm">期初作業</a><br>
+			<a href="hwit.htm">期初作業</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W02: 02/27</td>
 		<td class="tdMid">
-			期初作業展示週<br>
+			期初作業展示週
 		</td>
 		<td class="tdRight">
 			&nbsp;
@@ -78,20 +78,20 @@
 	<tr>
 		<td class="tdLeft">W03: 03/06</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">質數篩選</a></a>
+			<a href="https://geniusturtle6174.github.io/tutor_python">質數篩選</a>
 		</td>
 		<td class="tdRight">
-			<a href="pr02.htm">課後練習 02</a><br>
+			<a href="pr02.htm">課後練習 02</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W04: 03/13</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">矩陣運算</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">矩陣運算</a>
 		</td>
 		<td class="tdRight">
-			<a href="pr03.htm">課後練習 03</a><br>
+			<a href="pr03.htm">課後練習 03</a>
 		</td>
 	</tr>
 
@@ -101,14 +101,14 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">動態規劃</a><br>
 		</td>
 		<td class="tdRight">
-			<a href="pr04.htm">課後練習 04</a><br>
+			<a href="pr04.htm">課後練習 04</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W06: 03/27</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：梯度下降</a><br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：梯度下降</a>
 		</td>
 		<td class="tdRight">
 			<a href="pr05.htm">課後練習 05</a><br>
@@ -139,10 +139,10 @@
 	<tr>
 		<td class="tdLeft">W09: 04/17</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習（複習）：基本概念、效果評估、最近鄰居法</a><br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習（複習）：基本概念、效果評估、最近鄰居法</a>
 		</td>
 		<td class="tdRight">
-			<a href="pr06.htm">課後練習 06</a><br>
+			<a href="pr06.htm">課後練習 06</a>
 		</td>
 	</tr>
 
@@ -152,7 +152,7 @@
 			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：貝氏分類、線性回歸（複習）、特徵降維（複習）</a><br>
 		</td>
 		<td class="tdRight">
-			<a href="pr07.htm">課後練習 07</a><br>
+			<a href="pr07.htm">課後練習 07</a>
 		</td>
 	</tr>
 
@@ -170,10 +170,10 @@
 	<tr>
 		<td class="tdLeft">W12: 05/08</td>
 		<td class="tdMid">
-			機器學習：決策樹
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：基於樹的模型</a>
 		</td>
 		<td class="tdRight">
-			課後練習 09<br>
+			<a href="pr09.htm">課後練習 09</a>
 		</td>
 	</tr>
 
