--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -190,7 +190,7 @@
 	<tr>
 		<td class="tdLeft">W14: 05/22</td>
 		<td class="tdMid">
-			機器學習：交叉驗證、實作演練
+			機器學習：交叉驗證
 		</td>
 		<td class="tdRight">
 			課後練習 11<br>
@@ -200,7 +200,8 @@
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			機器學習：實作演練<br>
+			機器學習：（自我閱讀）主題待公布<br>
+			本週課堂時段僅供有需求的同學進行線上提問，大家不必到教室
 		</td>
 		<td class="tdRight">
 			課後練習 12<br>
