--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -180,28 +180,27 @@
 	<tr>
 		<td class="tdLeft">W13: 05/15</td>
 		<td class="tdMid">
-			機器學習：支撐向量機<br>
+			（線上非同步教學）<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：輸入正規化</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 10<br>
+			<a href="pr10.htm">課後練習 10</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W14: 05/22</td>
 		<td class="tdMid">
-			機器學習：交叉驗證
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：交叉驗證</a>
 		</td>
 		<td class="tdRight">
-			課後練習 11<br>
+			<a href="pr11.htm">課後練習 11</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			機器學習：（自我閱讀）主題待公布<br>
-			本週課堂時段僅供有需求的同學進行線上提問，大家不必到教室
+			（線上非同步教學）機器學習：支撐向量機<br>
 		</td>
 		<td class="tdRight">
 			課後練習 12<br>
