--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -200,10 +200,10 @@
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			（線上非同步教學）機器學習：支撐向量機<br>
+			（線上非同步教學）<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：支撐向量機</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 12<br>
+			<a href="pr12.htm">課後練習 12</a><br>
 		</td>
 	</tr>
 
