minor update pr10

--- a/25s_math/pr10.htm
+++ b/25s_math/pr10.htm
@@ -15,7 +15,7 @@
 	<li>(30%)嘗試將教材「輸入正規化」範例中所使用的模型替換成其他的，使得是否做輸入正規化的 accuracy 不會變化。</li>
 	<li>(70%)選定一個模型，並以 Kaggle 的 <a href="https://www.kaggle.com/competitions/titanic">Titanic - Machine Learning from Disaster</a> 競賽，嘗試進行正規化與否，是否會讓成績有所變化。
 		<ul>
-			<li>此題所選的模型，不能與上一題相同。</li>
+			<li>此題所選的模型，不能與上一題（包含原始範例與你自選的模型）相同。</li>
 			<li>若有開始實作期末專案，也可以改用期末專案指定的競賽完成此題。</li>
 		</ul>
 	</li>
