--- a/25s_math/finalProject.htm
+++ b/25s_math/finalProject.htm
@@ -99,7 +99,7 @@
 	<li>預測或程式未準時繳交者，本專案只給予報告分數，並且會打八折。</li>
 	<li>報告是否繳交不影響是否及格時，不接受遲交。</li>
 	<li>使用 AI 輔助完成者，有義務將相關對話紀錄保留，以供查閱。</li>
-	<li>本專案允許 import numpy、scikit-learn、xgboost、lightgbm，以及任何 Python 內建之函式庫。若有預計在報告內放入實驗結果的相關圖片，可 import matplotlib。注意：pandas、PyTorch、Tensorflow、seaborn 等函式庫不允許使用。若有其他需求者，請找教師討論。</li>
+	<li>本專案允許 import numpy、scikit-learn、xgboost、lightgbm、catboost，以及任何 Python 內建之函式庫。若有預計在報告內放入實驗結果的相關圖片，可 import matplotlib。注意：pandas、PyTorch、Tensorflow、seaborn 等函式庫不允許使用。若有其他需求者，請找教師討論。</li>
 </ul>
 
 </body></html>
