--- a/25s_math/pr11.htm
+++ b/25s_math/pr11.htm
@@ -30,11 +30,11 @@
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>本週僅允許使用該範例有 import 的函式庫，以及你於第二題選定的模型所屬的函式庫。</li>
+	<li>本週僅允許使用該範例有 import 的函式庫、csv 函式庫，以及你於第二題選定的模型所屬的函式庫。如果你願意自己看懂 sklearn.model_selection.cross_validate，那也可以使用。</li>
 	<li>若有開始實作期末專案，也可以改用期末專案指定的競賽完成本週題目；此時，期末專案允許 import 的函式庫亦可用於本週。</li>
 	<li>完成後，請將下列項目，依指定方式在 eeclass 專區繳交。於課堂，教師將依繳交順序批改或叫號 demo。
 		<ul>
-			<li>文字輸入框回答：第二題的實驗結果（包含超參數與平均的評估結果）至少五組。</li>
+			<li>文字輸入框回答：第二題的實驗結果（包含超參數，與使用該組超參數進行交叉驗證後的平均的評估結果）至少五組。</li>
 			<li>附件繳交：所有程式碼（若有多個檔案，要能讓教師容易看出執行順序）。</li>
 		</ul>
 	</li>
