--- a/25s_math/pr12.htm
+++ b/25s_math/pr12.htm
@@ -31,9 +31,9 @@ model = SVC()
 model.fit(x_train, y_train)
 </pre>
 		<ul>
-			<li>除了實際數據的不同以外，你的圖片請盡可能的與此相似，愈相似則在 demo 時會被問的問題可能就會愈少：<br><img src="pics/pr12_example.png" height="300px"></li>
+			<li>除了實際數據的不同以外，你的圖片請盡可能的與此相似，愈相似則教師想問你的問題可能就會愈少：<br><img src="pics/pr12_example.png" height="300px"></li>
 			<li>你必須只使用一個 py 檔案完成此題目。</li>
-			<li>如果你的電腦在 25000 個 sample 的情況下會跑超過 10 秒，則可以適當的減少 sample 個數，以使其盡可能接近但又不會超過 10 秒，唯仍須使所有要測試的 sample 個數保持等差數列。</li>
+			<li>如果你的電腦在 25000 個 sample 的情況下會跑超過 10 秒，則可以適當的減少最大的 sample 個數，以使其盡可能接近但又不會超過 10 秒；唯仍須測試五個不同的 sample 個數，並使所有要測試的 sample 個數保持等差數列。</li>
 		</ul>
 	</li>
 </ul>
