--- a/25s_math/pr10.htm
+++ b/25s_math/pr10.htm
@@ -16,6 +16,7 @@
 	<li>(70%)選定一個模型，並以 Kaggle 的 <a href="https://www.kaggle.com/competitions/titanic">Titanic - Machine Learning from Disaster</a> 競賽，嘗試進行正規化與否，是否會讓成績有所變化。
 		<ul>
 			<li>此題所選的模型，不能與上一題（包含原始範例與你自選的模型）相同。</li>
+			<li>此題所指之成績，為 leaderboard 上之成績。</li>
 			<li>若有開始實作期末專案，也可以改用期末專案指定的競賽完成此題。</li>
 		</ul>
 	</li>
@@ -24,7 +25,7 @@
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>本週僅允許使用該範例有 import 的函式庫，以及你為這兩題選定的模型所屬的函式庫。</li>
+	<li>本週僅允許使用該範例有 import 的函式庫、csv 函式庫，以及你為這兩題選定的模型所屬的函式庫</li>
 	<li>若第二題選擇期末專案，則期末專案允許 import 的函式庫亦可用於第二題。</li>
 	<li>完成後，請將下列項目，依指定方式在 eeclass 專區繳交。於隔週課堂，教師將依繳交順序批改或叫號 demo。
 		<ul>
