--- a/25s_math/pr11.htm
+++ b/25s_math/pr11.htm
@@ -20,7 +20,7 @@
 		</ul>
 	</li>
 	<li>(60%)選定幾個有超參數可以調整的模型，例如 MLPClassifier 或 XGBClassifier，來進行交叉驗證，並透過調整超參數，以盡可能取得好的平均效果。</li>
-	<li>(20%)使用前面取得最佳結果的超參數和模型架構，以及訓練集和驗證集一起訓練模型，並對競賽的測試資料預測出結果後，上傳至 Kaggle。
+	<li>(20%)使用競賽提供的全部訓練資料，以及前面取得最佳結果的超參數和模型架構一起訓練模型，並對競賽的測試資料預測出結果後，上傳至 Kaggle。
 		<ul>
 			<li>為了練習題的批改方便，於本週請不要使用教材第三個範例「將過程中訓練的模型全部直接保留，並將其全部用來對測試集做預測，再將結果取平均或中位數等統計」的方式。</li>
 		</ul>
