detail des of rule

--- a/25s_math/finalProject.htm
+++ b/25s_math/finalProject.htm
@@ -23,7 +23,7 @@
 	</li>
 	<li>繳交方式: eeclass 作業上傳區，「預測成績與程式」和「報告」會分別開設繳交區，細節規定如下
 		<ul>
-			<li>預測成績：檔名應為 lb_result.txt，內容只有一行，為你在排行榜上所取得的最佳評估結果。</li>
+			<li>預測成績：檔名應為 lb_result.txt，內容只有一行，該行僅含有一個浮點數，為你在排行榜上所取得的最佳評估結果。</li>
 			<li>程式
 				<ul>
 					<li>只須執行一個 *.py 檔案時，該 *.py 檔案名稱須以 run_ 開頭，餘下的部分原則上比照 Python 變數命名規則。</li>
