--- a/25s_math/finalProject.htm
+++ b/25s_math/finalProject.htm
@@ -23,12 +23,16 @@
 	</li>
 	<li>繳交方式: eeclass 作業上傳區，「預測成績與程式」和「報告」會分別開設繳交區，細節規定如下
 		<ul>
-			<li>預測成績：檔名應為 lb_result.txt，內容只有一行，該行僅含有一個浮點數，為你在排行榜上所取得的最佳評估結果。</li>
+			<li>預測成績：檔名應為 lb_result.txt，內容只有一行，該行僅含有一個浮點數，為你在排行榜上所取得的最佳評估結果。
+				<ul>
+					<li>若 eeclass 系統提示檔案太小無法上傳，請從第二行起任意增加半形的英文、數字、符號、空白或空行等內容。</li>
+				</ul>
+			</li>
 			<li>程式
 				<ul>
-					<li>只須執行一個 *.py 檔案時，該 *.py 檔案名稱須以 run_ 開頭，餘下的部分原則上比照 Python 變數命名規則。</li>
-					<li>須執行超過一個 *.py 檔案時，這些 *.py 檔案名稱須依照執行順序，以 run1_、run2_、... 為開頭，且最多只能編號至 run4_。餘下的部分一樣原則上比照 Python 變數命名規則。</li>
-					<li>若要撰寫被用來 import 的檔案，則檔名除了不能以 run 或長相類似的單字(num, rum, ...)開頭，以及應比照 Python 變數命名規則以外，不受限制。</li>
+					<li>只須執行一個 *.py 檔案時，該 *.py 檔案名稱須名為 run.py，或以 run_ 開頭，餘下的部分原則上比照 Python 變數命名規則。</li>
+					<li>須執行超過一個 *.py 檔案時，這些 *.py 檔案名稱須依照執行順序，命名為 run1.py、run2.py、... ，或以 run1_、run2_、... 為開頭，且最多只能編號至 4。餘下的部分一樣原則上比照 Python 變數命名規則。</li>
+					<li>若要撰寫被用來 import 的檔案，則檔名除了不能以 run 或長相類似的單字(num, rum, ...)開頭以外，不受限制。</li>
 					<li>若有嘗試多種方法，應繳交你取得最佳結果的方法。</li>
 				</ul>
 			</li>
