Add optuna rules

--- a/25s_math/finalProject.htm
+++ b/25s_math/finalProject.htm
@@ -104,6 +104,12 @@
 	<li>報告是否繳交不影響是否及格時，不接受遲交。</li>
 	<li>使用 AI 輔助完成者，有義務將相關對話紀錄保留，以供查閱。</li>
 	<li>本專案允許 import numpy、scikit-learn、xgboost、lightgbm、catboost，以及任何 Python 內建之函式庫。若有預計在報告內放入實驗結果的相關圖片，可 import matplotlib。注意：pandas、PyTorch、Tensorflow、seaborn 等函式庫不允許使用。若有其他需求者，請找教師討論。</li>
+	<li>使用 optuna 等工具搜尋超參數者，相關規則如下
+		<ul>
+			<li>必須以「將找到的超參數複製到 run*.py 內」的方式使用，且不能讓搜尋工具在執行 run*.py 時被呼叫到。</li>
+			<li>搜尋超參數的程式碼可以不必隨「預測與程式」繳交，但建議在報告中提及，並附上部分或全部的相關程式碼。</li>
+		</ul>
+	</li>
 </ul>
 
 </body></html>
