--- a/25s_math/pr11.htm
+++ b/25s_math/pr11.htm
@@ -44,7 +44,7 @@
 	</li>
 	<li>只打算繳交部分項目時，請在文字輸入框說明。</li>
 	<li>若看到你的繳交已被批改，就代表你已取得分數，若沒被叫到就可以不必來 demo。若不放心，可以在離開前向教師詢問。</li>
-	<li>隔週 demo 者之折扣為八折。</li>
+	<li>本練習接受八折補交，細節另行公布。</li>
 </ul>
 
 </body></html>
