--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -190,7 +190,7 @@
 	<tr>
 		<td class="tdLeft">W14: 05/22</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：交叉驗證</a>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：交叉驗證、支撐向量機</a>
 		</td>
 		<td class="tdRight">
 			<a href="pr11.htm">課後練習 11</a><br>
@@ -200,7 +200,7 @@
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			（線上非同步教學）<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial">機器學習：支撐向量機</a><br>
+			線上實作週
 		</td>
 		<td class="tdRight">
 			<a href="pr12.htm">課後練習 12</a><br>
