Add "prev week"

--- a/25s_math/pr12.htm
+++ b/25s_math/pr12.htm
@@ -19,7 +19,7 @@
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 
 <ul>
-	<li>(10%)參加快問快答或到課。</li>
+	<li>(10%)上週參加快問快答或到課。</li>
 	<li>(90%)請將下列範例中，訓練資料的 sample 個數分別修改為 5000、10000、15000、20000、25000，並繪製 sample 個數與執行時間的關係圖。
 <pre class="brush: py">
 import numpy as np
