--- a/25s_math/finalProject.htm
+++ b/25s_math/finalProject.htm
@@ -67,7 +67,7 @@
 <ul>
 	<li>請以右列項目請直接存放在同一個目錄下的狀況來撰寫程式：題目給定之 train.csv、題目給定之 test.csv、所有程式碼、程式產生的最後的 submission file。</li>
 	<li>程式的中間產物可以直接存放在同一個目錄下，亦可建立子資料夾存放，唯子資料夾應能由程式判斷是否需建立。</li>
-	<li>於程式中讀寫資料時，應使用相對路徑。</li>
+	<li>於程式中讀寫資料時，應使用盡可能短的相對路徑。</li>
 	<li>任何「run」開頭的程式碼，必須能以不帶參數的方式在 command line 執行，並且在執行過程中，不必接受使用者的輸入。</li>
 	<li>請盡可能避免使用隨機程度過大的模型來進行預測。前述「隨機程度過大」之參考標準，為你所宣稱的成績，跟教師抽驗結果的成績，其差距在全班預測成績的 1 個標準差以上，即 1 * np.std(whole_class_claimed_scores) 以上。</li>
 </ul>
