--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -1,1 +1,225 @@
+<html>
+<head>
+	<title>MATH171001--程式設計一</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel=stylesheet type="text/css" href="myCss.css">
+	<base target="_blank">
+	<script type="text/javascript" src="myJs.js"></script>
+</head>
 
+<body bgcolor="#ccccff">
+
+<center>
+
+<span class="myTitle">
+	MATH171001 程式設計一<br>
+	R7R8R9 綜三 315<br>
+</span>
+<br>
+<table cellspacing="0" border=0>
+	<tr>
+		<td width=49% align=center>
+			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
+		</td>
+		<td width=49% align=center>
+			<span class="myTitle">助教：未定<br><script>emailDisplay("UNK", "gmail", "com");</script></span>
+		</td>
+	</tr>
+</table>
+
+<br>
+<hr/>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
+	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
+	<tr>
+		<td class="tdLeft">07/31</td>
+		<td class="tdRight">
+			<ul>
+				<li>eeclass 連結：TBA</li>
+				<li>進度細節會視情況調整，課後練習及作業未於課堂正式宣布前皆為暫定。</li>
+			</ul>
+		</td>
+	</tr>
+</table>
+
+<br><br>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=3 style="border-bottom-width:2;border-bottom-color:black">課程進度表</th></tr>
+	<tr>
+		<th class="thLeft" align=center>課程日期</th>
+		<th class="thRight" align=center colspan=2>概要</th>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W01: 09/04</td>
+		<td class="tdMid">
+			<a href="courseIntro.htm">課程簡介</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">開發環境介紹；輸入、輸出、數值運算；條件判斷</a><br>
+		</td>
+		<td class="tdRight">
+			<a href="prAndHwRules.htm">課後練習及作業總則</a><br>
+			<a href="pr01.htm">課後練習 01</a><br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W02: 09/11</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">條件判斷；數學函式庫；自訂函式</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 02
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W03: 09/18</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">自訂函式；串列</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 03
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W04: 09/25</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列；LeetCode 注意事項整理；字典；迴圈</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
+		</td>
+		<td class="tdRight">
+			課後練習 04
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W05: 10/02</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 05<br>
+			期中作業一
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W06: 10/09</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter</a>
+		</td>
+		<td class="tdRight">
+			課後練習 06<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W07: 10/16</td>
+		<td class="tdMid">
+			期中作業一展示週
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W08: 10/23</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a>
+		</td>
+		<td class="tdRight">
+			課後練習 07<br>
+		</td>
+	</tr>
+	
+	<tr>
+		<td class="tdLeft">W09: 10/30</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">字串；Numpy</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 08</a><br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W10: 11/06</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">檔案；模組</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 09<br>
+			期中作業二
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W11: 11/13</td>
+		<td class="tdMid">
+			期中作業二展示週
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W12: 11/20</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 10<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W13: 11/27</td>
+		<td class="tdMid">
+			（暫定）爬蟲<br>
+		</td>
+		<td class="tdRight">
+			課後練習 11<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W14: 12/04</td>
+		<td class="tdMid">
+			（暫定）網頁伺服器<br>
+			<!--a href="examRules.htm">期末測驗規則</a-->
+		</td>
+		<td class="tdRight">
+			課後練習 12<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W15: 12/11</td>
+		<td class="tdMid">
+			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本處理</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 13<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W16: 12/18</td>
+		<td class="tdMid">
+			期末考試<br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+</table>
+<br>
+</center>
+</body></html>
