--- a/25f_math/pr01.htm
+++ b/25f_math/pr01.htm
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#ccccff">
 
-<p style="background-color:#9f9;text-align:center;font-size:17pt">隨堂練習 01</p>
+<p style="background-color:#9f9;text-align:center;font-size:17pt">課後練習 01</p>
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
@@ -33,7 +33,7 @@
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<!--li>排隊 demo 請使用<a href="https://forms.gle/UYCjniKwNNVHyp4K6">此連結</a>。</li-->
+	<li>除修課問卷外，此練習皆須於當週 demo。排隊 demo 請使用<a href="https://forms.gle/9bcibZUBr9Y8zfEQ9">此連結</a>。</li>
 	<li>修課問卷不於課堂現場檢查，填寫期限至 09/11（四）08:00 截止，該時間之後隨時會關閉問卷並不再接受填答。</li>
 	<li>等待加簽者之加簽申請，教師會等到申請者填完修課問卷後，再決定是否核准。未及時填寫者，原則上不予加簽。</li>
 	<li>Demo 時的問題，可能會包含教師或助教對你的程式做點修改，然後請你回答修改後的程式行為。</li>
