--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -22,7 +22,7 @@
 			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
 		</td>
 		<td width=49% align=center>
-			<span class="myTitle">助教：未定<br><script>emailDisplay("UNK", "gmail", "com");</script></span>
+			<span class="myTitle">助教：林元鴻<br><script>emailDisplay("a0909306586", "gmail", "com");</script></span>
 		</td>
 	</tr>
 </table>
@@ -71,7 +71,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">條件判斷；數學函式庫；自訂函式</a><br>
 		</td>
 		<td class="tdRight">
-			課後練習 02
+			<a href="pr02.htm">課後練習 02</a>
 		</td>
 	</tr>
 
