--- a/25f_math/pr01.htm
+++ b/25f_math/pr01.htm
@@ -11,7 +11,7 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>有攜帶筆電，並願意當場安裝開發環境及接受教師或助教檢查安裝正確性者，下列每題各 20%：
+	<li>有攜帶筆電，並願意接受教師或助教檢查開發環境安裝之正確性者，下列每題各 20%：
 		<ul>
 			<li>利用 print 印出你的學號和姓名。</li>
 			<li>設定兩個變數 a、b（或其他你喜歡的名稱），內容各自都是一個正整數，請計算 a 除以 b 的餘數，以及判斷 a 是否為 b 的倍數，並印出計算及判斷結果。</li>
@@ -22,12 +22,11 @@
 					<li>a = 12，b = 6 時應回答 12。</li>
 				</ul>
 			</li>
-			<li>填寫<a href="https://forms.gle/ytZuevcqzoWmXJAy9">修課問卷</a>。未嚴格依照說明填答，或填答內容不實者，將酌予扣分，且扣分範圍不限於本練習。</li>
-			<li>安裝環境檢查。</li>
+			<li>填寫<a href="https://forms.gle/ytZuevcqzoWmXJAy9">修課問卷</a>。未嚴格依照說明填答，或填答內容不實者，依教師主觀認定之影響範圍酌予扣分。</li>
+			<li>開發環境安裝檢查。</li>
 		</ul>
 	</li>
-	<li>其他同學：上述前四題，每題各 25%。
-	</li>
+	<li>其他同學：上述前四題，每題各 25%。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
@@ -35,8 +34,8 @@
 <ul>
 	<li>除修課問卷外，此練習皆須於當週 demo。排隊 demo 請使用<a href="https://forms.gle/9bcibZUBr9Y8zfEQ9">此連結</a>。</li>
 	<li>修課問卷不於課堂現場檢查，填寫期限至 09/11（四）08:00 截止，該時間之後隨時會關閉問卷並不再接受填答。</li>
-	<li>等待加簽者之加簽申請，教師會等到申請者填完修課問卷後，再決定是否核准。未及時填寫者，原則上不予加簽。</li>
 	<li>Demo 時的問題，可能會包含教師或助教對你的程式做點修改，然後請你回答修改後的程式行為。</li>
+	<li>等待加簽者請留意，未嚴格依照說明填答者，教師得視對應之優先原則為不符合。</li>
 </ul>
 
 </body></html>
