--- a/25f_math/pr02.htm
+++ b/25f_math/pr02.htm
@@ -11,7 +11,7 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(50%)口語上的「取個整數」的目標，通常不是指數學上的整數，而是某個整數的倍數，例如「將 123 取個整數」，視目標不同，可以是 125 或 130，也有可能是 120 或者 100 等結果。請撰寫一個 function q1，計算「當 b 為正整數時，將 a 加上一個盡可能小的非負整數，使結果為 b 的倍數；當 b 為負整數時，將 a 減去一個盡可能小的非負整數，使結果為 b 的倍數」的結果，範例如下：
+	<li>(50%)口語上的「取個整數」的目標，通常不是指數學上的整數，而是某個整數的倍數，例如「將 123 取個整數」，視目標不同，可以是 125 或 130，也有可能是 120 或者 100 等結果。請撰寫一個 function q1，計算「當 b 為正整數時，將正整數 a 加上一個盡可能小的非負整數，使結果為 b 的倍數；當 b 為負整數時，將正整數 a 減去一個盡可能小的非負整數，使結果為 b 的倍數」的結果，範例如下：
 		<ul>
 			<li>a = 123，b = 5 時，函式應回傳 125。</li>
 			<li>a = 123，b = -6 時，函式應回傳 120。</li>
