Update add-course rules

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -41,12 +41,13 @@
 				<li>進度細節會視情況調整，課後練習及作業未於課堂正式宣布前皆為暫定。</li>
 				<li>加簽處理與優先參考原則（公告至加退選教師簽核結束）
 					<ol>
-						<li value="0">下列之「及時」，皆指 09/06 08:00 前；「必修」指必修本課程，且無法以過往學分抵免者；提出說明或證明之管道，為修課問卷或 email</li>
+						<li value="0">下列之「及時」，皆指 09/06 08:00 前；「必修」指必修本課程，且無法以過往學分抵免者；提出證明之管道，為修課問卷或 email；「優先核准」若遇並列時，由教師主觀判斷選擇</li>
 						<li>未於第一週上課當日 08:00 前申請者，視為非必修生</li>
-						<li>是否為必修（符合者優先。須及時提出適當說明）</li>
-						<li>是否為大四或以上（符合者優先。交換生未及時主動提出原校年級證明者，本項視為不符合）</li>
-						<li>R6 與 Ra 之空堂數（高者優先。未能及時填完修課問卷者，本項視為 0）</li>
-						<li>以上最多簽予四人，若有並列超額時，依教師主觀判斷調整。</li>
+						<li>於第一週上課當日 08:00 前提出適當證明之必修生優先核准</li>
+						<li>餘下者於名額有剩餘時，大四以上優先核准（交換生須及時主動提出原校年級證明）</li>
+						<li>再餘下者於名額有剩餘時，R6 與 Ra 之空堂數多者優先核准（未能及時填妥修課問卷者，空堂數視為 0）</li>
+						<li>再餘下者於名額有剩餘時，依教師主觀判斷之課後練習 01 表現高低核准</li>
+						<li>以上最多簽予四人</li>
 					</ol>
 				</li>
 			</ul>
