--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -47,7 +47,7 @@
 						<li>餘下者於名額有剩餘時，大四以上優先核准（交換生須及時主動提出原校年級證明）</li>
 						<li>再餘下者於名額有剩餘時，R6 與 Ra 之空堂數多者優先核准（未能及時填妥修課問卷者，空堂數視為 0）</li>
 						<li>再餘下者於名額有剩餘時，依教師主觀判斷之課後練習 01 表現高低核准</li>
-						<li>以上最多簽予四人</li>
+						<li>原則上最多簽予四人</li>
 					</ol>
 				</li>
 			</ul>
