--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -45,9 +45,9 @@
 						<li>未於第一週上課當日 08:00 前申請者，視為非必修生</li>
 						<li>於第一週上課當日 08:00 前提出適當證明之必修生優先核准</li>
 						<li>餘下者於名額有剩餘時，大四以上優先核准（交換生須及時主動提出原校年級證明）</li>
-						<li>再餘下者於名額有剩餘時，R6 與 Ra 之空堂數多者優先核准（未能及時填妥修課問卷者，空堂數視為 0）</li>
+						<li>再餘下者於名額有剩餘時，R6 與 Ra 之空堂數多者優先核准</li>
 						<li>再餘下者於名額有剩餘時，依教師主觀判斷之課後練習 01 表現高低核准</li>
-						<li>原則上最多簽予四人</li>
+						<li>未及時填畢修課問卷，或未嚴格依照說明填答者，將影響加簽與否或成績計算。</li>
 					</ol>
 				</li>
 			</ul>
