Update pr02 and schedule

--- a/25f_math/index.htm
+++ b/25f_math/index.htm
@@ -89,7 +89,7 @@
 	<tr>
 		<td class="tdLeft">W03: 09/18</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">自訂函式；串列</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">自訂函式；LeetCode 注意事項整理；串列</a><br>
 		</td>
 		<td class="tdRight">
 			課後練習 03
@@ -99,7 +99,7 @@
 	<tr>
 		<td class="tdLeft">W04: 09/25</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列；LeetCode 注意事項整理；字典；迴圈</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列；字典；迴圈</a><br>
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
