--- a/25f_math/pr02.htm
+++ b/25f_math/pr02.htm
@@ -17,16 +17,18 @@
 			<li>a = 123，b = -6 時，函式應回傳 120。</li>
 		</ul>
 	</li>
-	<li>(50%)撰寫一 function q2，輸入是四個正浮點數 x、y、d、theta，且 0 &le; theta &lt; 2&pi;，依次代表當你將一根針丟到座標平面上時，針的其中一端點的 x 座標和 y 座標、針的長度，以及從該端點指向另一端點的向量與 x 軸正向的夾角。請回傳 2 個浮點數和一個布林值（即 True 或 False），依次代表另一端點的 x 座標和 y 座標，以及此根針是否有穿越任何 y 為整數的水平線。</li>
+	<li>(50%)撰寫一 function q2，輸入是四個正浮點數 x、y、d、theta，且 0 &le; theta &lt; 2&pi;，依次代表當你將一根針丟到座標平面上時，針的其中一端點的 x 座標和 y 座標、針的長度，以及從該端點指向另一端點的向量與 x 軸正向的夾角（以 x 軸正向為 0，逆時針方向為正）。請回傳 2 個浮點數和一個布林值（即 True 或 False），依次代表另一端點的 x 座標和 y 座標，以及此根針是否有穿越任何 y 為整數的水平線。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>此練習皆須於當週 demo。</li>
+	<li>此練習皆須於當週 demo，排隊 demo 請使用<a href="https://forms.gle/ogFLqSNo5CcxkbEo6">此連結</a>。</li>
+	<li><b>你必須將所需的參數準備好後，再傳入 function</b>。以教材「自訂函式」第一個範例來說，「a = 3」或者「a = int(input("Input a number:"))」之類的程式碼，必須僅出現在 function 之外。</li>
+	<li>Function 計算的結果，必須先用 return 傳出去以後，才能再用 print 等方式顯示出來。</li>
 	<li>第二題允許 import math 模組。</li>
+	<li><b>如果你無法自己推導出第二題所需之正確公式，請考慮退選此課程</b>。</li>
 	<li>本練習之 function 名稱可以自訂 iff 你自認已熟悉本練習所需之程式語法。</li>
-	<!-- <li>排隊 demo 請使用<a href="">此連結</a>。</li> -->
 </ul>
 
 </body></html>
